--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                <img src="static/yuma_logo.png" alt="YUMA Logo">
+                <img src="static/yuma_logo.svg" alt="YUMA Logo">
                 <span>YUMA</span>
             </div>
             <nav class="main-nav">
@@ -34,7 +34,7 @@
 
         <main class="content">
             <div class="welcome-message">
-                <div class="yuma-logo-name"> <img src="static/yuma_logo.png" alt="YUMA Logo Grande">
+                <div class="yuma-logo-name"> <img src="static/yuma_logo.svg" alt="YUMA Logo Grande">
                     <h1>YUMA</h1>
                 </div>
                 <p>Para começarmos configure sua chave no campo KEY no menu</p>
