feat: alinhamento de input e estilização de envio

--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -35,10 +35,12 @@
 
         <main class="content">
             <form id="chat_form" class="query__container" method="post">
-                <div class="input-container">
-                    <input type="text" id="user_input" class="query" autocomplete="off" placeholder="Digite sua mensagem aqui"/>
-                    <button class="send" type="submit">
-                        <img src=""/>
+                <div class="input__container">
+                    <input type="text" id="user__input" class="query" autocomplete="off" placeholder="Digite sua mensagem aqui..."/>
+                    <button class="send" type="submit" >
+                        <span id="arrow_upward" class="material-icons">
+                            arrow_upward
+                        </span>
                     </button>
                 </div>
             </form>
