--- a/src/static/chat.css
+++ b/src/static/chat.css
@@ -1,4 +1,4 @@
-.query__container {
+/* .query__container {
     grid-area: query;
     width: 100%;
     height: 50px;
@@ -6,26 +6,45 @@
     align-items: center;
     border: 4px solid #30ABED;
     border-radius: 30px;
+    bottom: 10px
+} */
+
+.query__container {
+    width: calc(100% - 10px);
+    min-height: 35px;
+    max-height: 230px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 40px;
+    background-color: white;
+    padding: 0px 5px;
+    box-shadow: 0.1px 4px 4px rgba(75, 79, 84, 0.2);
+    align-self: flex-end;
 }
 
-.input_container {
-    justify-content: center;
+.input__container {
+    margin-left: auto;
     width: calc(100% - 25px);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     border-radius: 40px;
     padding: 5px;
+}
+
+.input__container ::placeholder {
+    font-weight: 600;
+    font-size: 15px;
 }
 
 .query {
     width: calc(100% - 30px);
     height: 40px;
-    padding: 10px;
     border: 0px;
     border-radius: 0px 0px 0px 0px;
-    padding: 1px;
     background-color: transparent;
+    font-size: 15px;
     
 }
 
@@ -35,8 +54,21 @@
 }
 
 .send {
-    border-radius: 0px 20px 20px 0px;
-    background-color: #000;
+    background-color: #121826;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
     border: 10px;
     cursor: pointer;
+    text-align: center;
+    padding: 0;
+}
+
+.user__input {
+    font-size: 20px;
+}
+
+#arrow_upward {
+    color: white;
+    font-size: 30px;
 }
